feat: first api implementation
